Changelog for plone.app.portlets

    (name of developer listed in brackets)


plone.app.portlets 1.1 - UNRELEASED

    - PLIP203: Add the ability to export and import portlet assignments and
      blacklisting.
      [optilude]

    - PLIPs 205 and 218: Allow registering portlet types to multiple portlet
      manager interfaces, require portlet types to be explicitly registered
      for portlet manager interfaces, enable modifying registrations through
      GenericSetup, and restrict most default Plone portlet types to left/
      right/dashboard columns.
      [sirgarr]
    
    - PLIP207: Allow custom portlet managers, i.e., allow specifying an
      alternative portlet manager class through GenericSetup.
      [sirgarr]

plone.app.portlets 1.0.6

    - Sort the languages in the language portlet using their native name.
      [wichert]

    - Fixed None value in query_string in calendar portlet. This closes
      http://dev.plone.org/plone/ticket/7331.
      [hannosch]

    - Fixed logic error in getRootPath in the last change.
      [hannosch]

    - Only show the language portlet if more than one language is available.
      This brings it in sync with the language selection viewlet.
      [wichert]

    - Fix missing variable on the language portlet renderer. This fixes
      NuPlone which relies on the language selector portlet.
      [wichert]

    - Fixed undefined variable name introduced in the last change.
      [hannosch]

    - Correct getRootPath to not add a trailing / to paths if there
      are no context subelements. This was breaking webcouturier.dropdownmenu
      in situations where one of the sections was a navigation root.
      [wichert]

plone.app.portlets 1.0.5

    - Made absolute_url() work properly on the custom adding views. This is
      necessary for the <base /> URL to be set correctly.
      [optilude]

    - Handle RSS feed entries which do not have an update timestamp correctly.